#1 add lnb observer service

--- a/Avril/src/app/gnb/gnb.component.html
+++ b/Avril/src/app/gnb/gnb.component.html
@@ -2,7 +2,7 @@
   <div class="am-header-left">
     <a id="naviconLeft" href="javascript:" class="am-navicon d-none d-lg-flex" (click)="onClickMenuHamburg()"><i class="icon ion-navicon-round"></i></a>
     <a id="naviconLeftMobile" href="javascript:" class="am-navicon d-lg-none" (click)="onClickMenuHamburg()"><i class="icon ion-navicon-round"></i></a>
-    <a href="index.html" class="am-logo">Avril</a>
+    <a href="javascript:" class="am-logo">Avril</a>
   </div><!-- am-header-left -->
 
   <div class="am-header-right">
