--- a/front/src/app/sign/sign-up.component.html
+++ b/front/src/app/sign/sign-up.component.html
@@ -3,33 +3,23 @@
     <div class="row no-gutters">
       <div class="col-lg-5">
         <div>
-          <h2>amanda</h2>
-          <p>The Responsive Bootstrap 4 Admin Template</p>
-          <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate.</p>
-
+          <h2>Beaver</h2>
           <hr>
-          <p>Already have an account? <br> <a href="page-signin.html">Sign In</a></p>
+          <p>Already have an account? <br> <a [routerLink]="'/sign/signin'">Sign In</a></p>
         </div>
       </div>
       <div class="col-lg-7">
-        <h5 class="tx-gray-800 mg-b-25">Signin to Your Account</h5>
-
+        <h5 class="tx-gray-800 mg-b-25">Signup to Your Account</h5>
         <div class="form-group">
           <label class="form-control-label">Email:</label>
           <input type="email" name="email" class="form-control" placeholder="Type email address">
         </div><!-- form-group -->
 
-        <div class="row row-xs">
+        <div class="row">
           <div class="col">
             <div class="form-group">
-              <label class="form-control-label">Firstname:</label>
+              <label class="form-control-label">Name:</label>
               <input type="text" name="firstname" class="form-control" placeholder="Type firstname">
-            </div><!-- form-group -->
-          </div><!-- col -->
-          <div class="col">
-            <div class="form-group">
-              <label class="form-control-label">Lastname:</label>
-              <input type="text" name="lastname" class="form-control" placeholder="Type lastname">
             </div><!-- form-group -->
           </div><!-- col -->
         </div><!-- row -->
@@ -48,17 +38,9 @@
             </div><!-- form-group -->
           </div><!-- col -->
         </div><!-- row -->
-
-        <div class="form-group">
-          <label class="form-control-label">Company Name:</label>
-          <input type="text" name="company" class="form-control" placeholder="Type company name">
-        </div><!-- form-group -->
-
-        <div class="form-group mg-b-20 tx-12">By clicking Sign Up button below you agree to our <a href="">Terms of Use</a> and our <a href="">Privacy Policy</a></div>
-
         <button type="submit" class="btn btn-block">Sign Up</button>
       </div><!-- col-7 -->
     </div><!-- row -->
-    <p class="tx-center tx-white-5 tx-12 mg-t-15">Copyright &copy; 2017. All Rights Reserved. Amanda by ThemePixels</p>
+    <p class="tx-center tx-white-5 tx-12 mg-t-15">Copyright &copy; 2019. All Rights Reserved. by circlegiven</p>
   </div><!-- signin-box -->
 </div>
