#5 Add beaver image in login page

--- a/client/src/app/sign/sign-in.component.html
+++ b/client/src/app/sign/sign-in.component.html
@@ -3,6 +3,7 @@
     <div class="row no-gutters">
       <div class="col-lg-5">
         <div>
+          <img src="../../assets/img/beaver.png" class="wd-70">
           <h2>Beaver</h2>
           <hr>
           <p>Don't have an account? <br> <a [routerLink]="'/sign/signup'">Sign up Now</a></p>
