--- a/client/src/app/sign/sign-up.component.html
+++ b/client/src/app/sign/sign-up.component.html
@@ -3,42 +3,59 @@
     <div class="row no-gutters">
       <div class="col-lg-5">
         <div>
+          <img src="../../assets/img/beaver.png" class="wd-70">
           <h2>Beaver</h2>
           <hr>
-          <p>Already have an account? <br> <a [routerLink]="'/sign/signin'">Sign In</a></p>
+          <p>Already have an account? <br> <a [routerLink]="'/sign/signin'">Login</a></p>
         </div>
       </div>
       <div class="col-lg-7">
         <h5 class="tx-gray-800 mg-b-25">Signup to Your Account</h5>
-        <div class="form-group">
-          <label class="form-control-label">Email:</label>
-          <input type="email" name="email" class="form-control" placeholder="Type email address">
-        </div><!-- form-group -->
+        <form [formGroup]="form" (ngSubmit)="registerUser()">
+          <div class="form-group">
+            <label class="form-control-label">Email:</label>
+            <input type="email" name="email" class="form-control" [class.parsley-error]="email.invalid" placeholder="email" formControlName="email">
+            <ul class="parsley-errors-list filled" *ngIf="email.invalid">
+              <li class="parsley-required" *ngIf="email.errors.required">이메일을 입력해주세요.</li>
+              <li class="parsley-required" *ngIf="email.errors.email">이메일 형식이 아닙니다.</li>
+              <li class="parsley-required" *ngIf="email.errors.duplicated">해당 이메일은 허용되지 않습니다.</li>
+            </ul>
+          </div><!-- form-group -->
 
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label class="form-control-label">Name:</label>
-              <input type="text" name="firstname" class="form-control" placeholder="Type firstname">
-            </div><!-- form-group -->
-          </div><!-- col -->
-        </div><!-- row -->
+          <div class="row">
+            <div class="col">
+              <div class="form-group">
+                <label class="form-control-label">Name:</label>
+                <input type="text" name="name" class="form-control" [class.parsley-error]="name.invalid" placeholder="name" formControlName="name">
+                <ul class="parsley-errors-list filled" *ngIf="name.invalid"><li class="parsley-required">이름을 입력해주세요.</li></ul>
+              </div><!-- form-group -->
+            </div><!-- col -->
+          </div><!-- row -->
 
-        <div class="row row-xs">
-          <div class="col">
-            <div class="form-group">
-              <label class="form-control-label">Password:</label>
-              <input type="password" name="password" class="form-control" placeholder="Type password">
-            </div><!-- form-group -->
-          </div><!-- col -->
-          <div class="col">
-            <div class="form-group">
-              <label class="form-control-label">Confirm Password:</label>
-              <input type="password" name="conpassword" class="form-control" placeholder="Retype password">
-            </div><!-- form-group -->
-          </div><!-- col -->
-        </div><!-- row -->
-        <button type="submit" class="btn btn-block">Sign Up</button>
+          <div class="row row-xs">
+            <div class="col">
+              <div class="form-group">
+                <label class="form-control-label">Password:</label>
+                <input type="password" name="password" class="form-control" [class.parsley-error]="password.invalid" placeholder="password" formControlName="password">
+                <ul class="parsley-errors-list filled" *ngIf="password.invalid">
+                  <li class="parsley-required" *ngIf="password.errors.required">패스워드를 입력해주세요.</li>
+                  <li class="parsley-required" *ngIf="password.errors.minlength">패스워드는 최소 6자리 입니다.</li>
+                </ul>
+              </div><!-- form-group -->
+            </div><!-- col -->
+            <div class="col">
+              <div class="form-group">
+                <label class="form-control-label">Confirm Password:</label>
+                <input type="password" name="confirmPassword" class="form-control" [class.parsley-error]="confirmPassword.invalid" placeholder="password" formControlName="confirmPassword">
+                <ul class="parsley-errors-list filled" *ngIf="confirmPassword.invalid">
+                  <li class="parsley-required" *ngIf="confirmPassword.errors.required">패스워드를 입력해주세요.</li>
+                  <li class="parsley-required" *ngIf="confirmPassword.errors.mustMatch">패스워드와 동일하게 입력하세요.</li>
+                </ul>
+              </div><!-- form-group -->
+            </div><!-- col -->
+          </div><!-- row -->
+          <button type="submit" class="btn btn-block">Sign Up</button>
+        </form>
       </div><!-- col-7 -->
     </div><!-- row -->
     <p class="tx-center tx-white-5 tx-12 mg-t-15">Copyright &copy; 2019. All Rights Reserved. by circlegiven</p>
