#5 Change component name in sign
- change user service path
- change component names

--- a/client/src/app/sign/login.component.html
+++ b/client/src/app/sign/login.component.html
@@ -6,7 +6,7 @@
           <img src="../../assets/img/beaver.png" class="wd-70">
           <h2>Beaver</h2>
           <hr>
-          <p>Don't have an account? <br> <a [routerLink]="'/sign/signup'">Sign up Now</a></p>
+          <p>Don't have an account? <br> <a [routerLink]="'/sign/register'">Sign up Now</a></p>
           <p>Forgot password?<br> <a [routerLink]="'/sign/reset'">Reset password</a></p>
         </div>
       </div>
