--- a/client/src/app/sign/register-user.component.html
+++ b/client/src/app/sign/register-user.component.html
@@ -6,7 +6,7 @@
           <img src="../../assets/img/beaver.png" class="wd-70">
           <h2>Beaver</h2>
           <hr>
-          <p>Already have an account? <br> <a [routerLink]="'/sign/signin'">Login</a></p>
+          <p>Already have an account? <br> <a [routerLink]="'/sign/login'">Login</a></p>
         </div>
       </div>
       <div class="col-lg-7">
