--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<ngx-spinner type="square-spin" size="medium" color="#fff">
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 <router-outlet></router-outlet>
