--- a/client/src/app/sign/login.component.html
+++ b/client/src/app/sign/login.component.html
@@ -7,7 +7,7 @@
           <h2>Beaver</h2>
           <hr>
           <p>Don't have an account? <br> <a [routerLink]="'/sign/register'">Sign up Now</a></p>
-          <p>Forgot password?<br> <a [routerLink]="'/sign/reset'">Reset password</a></p>
+<!--          <p>Forgot password?<br> <a [routerLink]="'/sign/reset'">Reset password</a></p>-->
         </div>
       </div>
       <div class="col-lg-7">
@@ -19,7 +19,7 @@
           </div>
           <ul class="parsley-errors-list filled" *ngIf="(isSubmitted || email.dirty) && email.invalid">
             <li class="parsley-required"  *ngIf="email.errors.required">이메일을 입력해주세요.</li>
-            <li class="parsley-required" *ngIf="email.errors.email">이메일 형식이 아닙니다.</li>
+            <li class="parsley-required" *ngIf="email.errors.pattern">이메일 형식이 아닙니다.</li>
           </ul>
           <div style="padding: 10px"></div>
           <div class="input-group">
