--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="page-wrapper">
-  <router-outlet></router-outlet>
-</div>
+<!-- full loading -->
+<ngx-spinner [type]="spinnerType" [size]="spinnerSize" [color]="spinnerColor">
+  <p style="font-size: 20px; color: white">{{spinnerMessage}}</p>
+</ngx-spinner>
+<!-- //full loading -->
+<router-outlet></router-outlet>
