--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/css/app.bundle.css";
+@import "assets/css/vendors.bundle.css";
+@import "assets/css/beaver.css";
