--- a/client/src/app/authentication/authentication.component.html
+++ b/client/src/app/authentication/authentication.component.html
@@ -5,7 +5,7 @@
       <div class="flex-1">
         <router-outlet></router-outlet>
         <div class="position-absolute pos-bottom pos-left pos-right p-3 text-center text-white">
-          2020 © Beaver by&nbsp;<a href="https://www.gotbootstrap.com" class="text-white opacity-40 fw-500" target="_blank">circlegiven</a>
+          2020 © Beaver by&nbsp;circlegiven
         </div>
       </div>
     </div>
