--- a/client/src/app/board/component/header.component.html
+++ b/client/src/app/board/component/header.component.html
@@ -1,15 +1,13 @@
 <!-- we need this logo when user switches to nav-function-top -->
 <div class="page-logo">
-  <a href="#" class="page-logo-link press-scale-down d-flex align-items-center position-relative" data-toggle="modal" data-target="#modal-shortcut">
-    <img src="img/logo.png" alt="SmartAdmin WebApp" aria-roledescription="logo">
+  <a href="javascript:" class="page-logo-link press-scale-down d-flex align-items-center position-relative" (click)="goToMainPage()">
+    <img [style.height.px]="40" [style.width.px]="40" [src]="LOGO_IMAGE_PATH">
     <span class="page-logo-text mr-1">Beaver</span>
-    <span class="position-absolute text-white opacity-50 small pos-top pos-right mr-2 mt-n2"></span>
-    <i class="fal fa-angle-down d-inline-block ml-1 fs-lg color-primary-300"></i>
   </a>
 </div>
 <!-- DOC: nav menu layout change shortcut -->
 <div class="hidden-md-down dropdown-icon-menu position-relative">
-  <a href="#" class="header-btn btn js-waves-off" data-action="toggle" data-class="nav-function-hidden" title="Hide Navigation">
+  <a href="#" class="header-btn btn js-waves-off" (click)="changeSidebarVisible()">
     <i class="ni ni-menu"></i>
   </a>
   <ul>
