--- a/client/src/app/board/component/header.component.html
+++ b/client/src/app/board/component/header.component.html
@@ -6,29 +6,12 @@
   </a>
 </div>
 <!-- DOC: nav menu layout change shortcut -->
-<div class="hidden-md-down dropdown-icon-menu position-relative">
-  <a href="#" class="header-btn btn js-waves-off" (click)="changeSidebarVisible()">
+<div class="dropdown-icon-menu position-relative">
+  <a href="javascript:" class="header-btn btn js-waves-off" (click)="changeSidebarVisible()">
     <i class="ni ni-menu"></i>
   </a>
-  <ul>
-    <li>
-      <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-minify" title="Minify Navigation">
-        <i class="ni ni-minify-nav"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-fixed" title="Lock Navigation">
-        <i class="ni ni-lock-nav"></i>
-      </a>
-    </li>
-  </ul>
 </div>
 <!-- DOC: mobile button appears during mobile width -->
-<div class="hidden-lg-up">
-  <a href="#" class="header-btn btn press-scale-down waves-effect waves-themed" data-action="toggle" data-class="mobile-nav-on">
-    <i class="ni ni-menu"></i>
-  </a>
-</div>
 <div class="search">
   <form class="app-forms hidden-xs-down" role="search" action="page_search.html" autocomplete="off">
     <input type="text" id="search-field" placeholder="Search for anything" class="form-control" tabindex="1">
