--- a/client/src/app/board/component/footer.component.html
+++ b/client/src/app/board/component/footer.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center flex-1 text-muted">
-  <span class="hidden-md-down fw-700">
+  <span class="fw-700">
     2020 © Beaver by&nbsp;circlegiven
   </span>
 </div>
