--- a/client/src/app/board/component/header.component.html
+++ b/client/src/app/board/component/header.component.html
@@ -1,10 +1,5 @@
 <!-- logo -->
-<div class="page-logo width-mobile-auto m-0 align-items-center justify-content-center p-0 bg-transparent bg-img-none shadow-0 height-9">
-  <a href="javascript:" class="page-logo-link press-scale-down d-flex align-items-center" (click)="goToMainPage()">
-    <img [style.height.px]="40" [style.width.px]="40" [src]="LOGO_IMAGE_PATH">
-    <span class="page-logo-text mr-1">Beaver</span>
-  </a>
-</div>
+<div component-logo></div>
 <!-- //logo -->
 <!-- right -->
 <div class="ml-auto d-flex">
