--- a/client/src/app/board/component/menu.component.html
+++ b/client/src/app/board/component/menu.component.html
@@ -1,12 +1,8 @@
 <a href="javascript:" title="{{menu.label}}" class=" waves-effect waves-themed" (click)="goToPage(menu)">
-  <i class="fal fa-database"></i>
+  <i *ngIf="menu.isExistMenuIcon()" [ngClass]="menu.icon"></i>
   <span class="nav-link-text">{{menu.label}}</span>
-  <b class="collapse-sign" *ngIf="isExistSubMenuList(menu)"><em class="fal fa-angle-down"></em></b>
+  <b class="collapse-sign" *ngIf="menu.isExistSubMenuList()"><em class="fal fa-angle-down"></em></b>
 </a>
-<ul>
-  <li *ngFor="let subMenu of menu.subMenuList">
-    <a href="javascript:" title="{{subMenu.label}}" class=" waves-effect waves-themed">
-      <span class="nav-link-text">{{subMenu.label}}</span>
-    </a>
-  </li>
+<ul *ngIf="menu.isExistSubMenuList()">
+  <li component-sidebar-menu *ngFor="let subMenu of menu.subMenuList" [menu]="subMenu"></li>
 </ul>
