--- a/client/src/app/board/component/side-bar.component.html
+++ b/client/src/app/board/component/side-bar.component.html
@@ -3,8 +3,7 @@
 <!--  <a href="#" id="js-nav-menu-wrapper-left-btn" class="d-flex align-items-center justify-content-center width-4 btn mt-1 mb-1 mr-2 ml-1 p-0 fs-xxl text-primary"><i class="fal fa-angle-left"></i></a>-->
   <div class="nav-menu-wrapper d-flex flex-grow-1 width-0 overflow-hidden">
     <ul class="nav-menu js-nav-built">
-      <li component-sidebar-menu *ngFor="let menu of menuList"
-          [menu]="menu"></li>
+      <li component-sidebar-menu *ngFor="let menu of menuList" [menu]="menu"></li>
     </ul>
   </div>
 <!--  <a href="#" id="js-nav-menu-wrapper-right-btn" class="d-flex align-items-center justify-content-center width-4 btn mt-1 mb-1 mr-1 ml-2 p-0 fs-xxl text-primary"><i class="fal fa-angle-right"></i></a>-->
