--- a/client/src/app/board/board.component.html
+++ b/client/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 <div class="page-wrapper">
   <div class="page-inner">
     <!-- Left Aside -->
-    <aside component-sidebar style="position: fixed !important;"></aside>
+    <aside component-navigate style="position: fixed !important;"></aside>
     <!-- //Left Aside -->
     <div class="page-content-wrapper">
       <!-- Page Header -->
