--- a/client/src/app/common/profile/profile.component.html
+++ b/client/src/app/common/profile/profile.component.html
@@ -1,5 +1,5 @@
-<a href="#" data-toggle="dropdown" title="drlantern@gotbootstrap.com" class="header-icon d-flex align-items-center justify-content-center ml-2" aria-expanded="false">
-  <img src="img/demo/avatars/avatar-admin.png" class="profile-image rounded-circle" alt="Dr. Codex Lantern">
+<a href="#" data-toggle="dropdown" title="drlantern@gotbootstrap.com" class="header-icon d-flex align-items-center justify-content-center ml-2">
+  <img src="../../../../assets/img/azurlane/ship_thum/enterprise.png" class="profile-image rounded-circle">
   <!-- you can also add username next to the avatar with the codes below:
 <span class="ml-1 mr-1 text-truncate text-truncate-header hidden-xs-down">Me</span>
 <i class="ni ni-chevron-down hidden-xs-down"></i> -->
@@ -7,9 +7,9 @@
 <div class="dropdown-menu dropdown-menu-animated dropdown-lg" x-placement="bottom-start" style="position: absolute; will-change: top, left; top: 66px; left: 1315px;">
   <div class="dropdown-header bg-trans-gradient d-flex flex-row py-4 rounded-top">
     <div class="d-flex flex-row align-items-center mt-1 mb-1 color-white">
-                                        <span class="mr-2">
-                                            <img src="img/demo/avatars/avatar-admin.png" class="rounded-circle profile-image" alt="Dr. Codex Lantern">
-                                        </span>
+      <span class="mr-2">
+          <img src="img/demo/avatars/avatar-admin.png" class="rounded-circle profile-image" alt="Dr. Codex Lantern">
+      </span>
       <div class="info-card-text">
         <div class="fs-lg text-truncate text-truncate-lg">Dr. Codex Lantern</div>
         <span class="text-truncate text-truncate-md opacity-80">drlantern@gotbootstrap.com</span>
