#14 Header css modify

--- a/client/src/app/authentication/view/register-view.component.html
+++ b/client/src/app/authentication/view/register-view.component.html
@@ -1,7 +1,11 @@
 <div class="page-wrapper">
   <div class="page-inner bg-brand-gradient">
     <div class="page-content-wrapper bg-transparent m-0">
-      <component-auth-header [authType]="'register'"></component-auth-header>
+      <div class="height-10 w-100 shadow-lg px-4 bg-brand-gradient">
+        <div class="d-flex align-items-center container p-0">
+          <header component-board-header></header>
+        </div>
+      </div>
       <div class="flex-1">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
           <div class="row">
