--- a/client/src/app/common/header/header.component.html
+++ b/client/src/app/common/header/header.component.html
@@ -3,7 +3,7 @@
 <!-- //logo -->
 <!-- right -->
 <div class="ml-auto d-flex align-items-center">
-  <a href="javascript:" class="btn-link">
+  <a href="javascript:" class="btn-link" style="color: #fff">
     로그인
   </a>
   <!-- 알림 -->
