--- a/client/src/app/common/navigate/navigate.component.html
+++ b/client/src/app/common/navigate/navigate.component.html
@@ -2,7 +2,7 @@
 <nav class="primary-nav js-list-filter">
 <!--  <a href="#" id="js-nav-menu-wrapper-left-btn" class="d-flex align-items-center justify-content-center width-4 btn mt-1 mb-1 mr-2 ml-1 p-0 fs-xxl text-primary"><i class="fal fa-angle-left"></i></a>-->
   <div class="nav-menu-wrapper d-flex flex-grow-1 width-0 overflow-hidden">
-    <ul class="nav-menu js-nav-built">
+    <ul class="nav-menu">
       <li component-sidebar-menu *ngFor="let menu of menuList" [menu]="menu"></li>
     </ul>
   </div>
