--- a/client/src/app/common/logo/logo.component.html
+++ b/client/src/app/common/logo/logo.component.html
@@ -1,4 +1,4 @@
 <a href="javascript:" class="page-logo-link press-scale-down d-flex align-items-center" (click)="goToMainPage()">
   <img [style.height.px]="logoSize" [style.width.px]="logoSize" [src]="LOGO_IMAGE_PATH">
-  <span class="page-logo-text mr-1">{{logoName}}</span>
+  <span class="page-logo-text mr-1 fw-500">{{logoName}}</span>
 </a>
