--- a/client/src/app/database/view/dockyard-view.component.html
+++ b/client/src/app/database/view/dockyard-view.component.html
@@ -1,8 +1,4 @@
-<div class="subheader">
-  <h1 class="subheader-title">
-    도크
-  </h1>
-</div>
+<div component-title [title]="title"></div>
 <div class="row">
   <div class="col-xl-12">
     <!-- 검색 -->
