#14 profile component test

--- a/client/src/app/common/search/search.component.html
+++ b/client/src/app/common/search/search.component.html
@@ -1,4 +1,4 @@
 <input type="text" class="form-control shadow-inset-2" placeholder="Search topics">
-<div class="input-group-append">
+<div class="input-group-append cursor-pointer">
   <span class="input-group-text"><i class="fal fa-search"></i></span>
 </div>
