--- a/client/src/app/common/profile/profile.component.html
+++ b/client/src/app/common/profile/profile.component.html
@@ -1,53 +1,25 @@
-<a href="#" data-toggle="dropdown" title="drlantern@gotbootstrap.com" class="header-icon d-flex align-items-center justify-content-center ml-2">
+<a href="javascript:" data-toggle="dropdown" class="header-icon d-flex align-items-center justify-content-center ml-2" (click)="changeProfileVisible()">
   <img src="../../../../assets/img/azurlane/ship_thum/enterprise.png" class="profile-image rounded-circle">
-  <!-- you can also add username next to the avatar with the codes below:
-<span class="ml-1 mr-1 text-truncate text-truncate-header hidden-xs-down">Me</span>
-<i class="ni ni-chevron-down hidden-xs-down"></i> -->
 </a>
-<div class="dropdown-menu dropdown-menu-animated dropdown-lg" x-placement="bottom-start" style="position: absolute; will-change: top, left; top: 66px; left: 1315px;">
+<div class="dropdown-menu dropdown-menu-animated dropdown-lg show" x-placement="bottom-start" style="position: absolute; will-change: top, left; top: 66px; left: 1315px;">
   <div class="dropdown-header bg-trans-gradient d-flex flex-row py-4 rounded-top">
     <div class="d-flex flex-row align-items-center mt-1 mb-1 color-white">
       <span class="mr-2">
-          <img src="img/demo/avatars/avatar-admin.png" class="rounded-circle profile-image" alt="Dr. Codex Lantern">
+        <img src="../../../../assets/img/azurlane/ship_thum/enterprise.png" class="profile-image rounded-circle">
       </span>
       <div class="info-card-text">
-        <div class="fs-lg text-truncate text-truncate-lg">Dr. Codex Lantern</div>
-        <span class="text-truncate text-truncate-md opacity-80">drlantern@gotbootstrap.com</span>
+        <div class="fs-lg text-truncate text-truncate-lg">Circlegiven</div>
+        <span class="text-truncate text-truncate-md opacity-80">circlegiven@gmail.com</span>
       </div>
     </div>
   </div>
   <div class="dropdown-divider m-0"></div>
-  <a href="#" class="dropdown-item" data-action="app-reset">
-    <span data-i18n="drpdwn.reset_layout">Reset Layout</span>
-  </a>
-  <a href="#" class="dropdown-item" data-toggle="modal" data-target=".js-modal-settings">
+  <a href="javascript:" class="dropdown-item" (click)="goToProfileSettings()">
     <span data-i18n="drpdwn.settings">Settings</span>
   </a>
   <div class="dropdown-divider m-0"></div>
-  <a href="#" class="dropdown-item" data-action="app-fullscreen">
-    <span data-i18n="drpdwn.fullscreen">Fullscreen</span>
-    <i class="float-right text-muted fw-n">F11</i>
-  </a>
-  <a href="#" class="dropdown-item" data-action="app-print">
-    <span data-i18n="drpdwn.print">Print</span>
-    <i class="float-right text-muted fw-n">Ctrl + P</i>
-  </a>
-  <div class="dropdown-multilevel dropdown-multilevel-left">
-    <div class="dropdown-item">
-      Language
-    </div>
-    <div class="dropdown-menu">
-      <a href="#?lang=fr" class="dropdown-item" data-action="lang" data-lang="fr">Français</a>
-      <a href="#?lang=en" class="dropdown-item active" data-action="lang" data-lang="en">English (US)</a>
-      <a href="#?lang=es" class="dropdown-item" data-action="lang" data-lang="es">Español</a>
-      <a href="#?lang=ru" class="dropdown-item" data-action="lang" data-lang="ru">Русский язык</a>
-      <a href="#?lang=jp" class="dropdown-item" data-action="lang" data-lang="jp">日本語</a>
-      <a href="#?lang=ch" class="dropdown-item" data-action="lang" data-lang="ch">中文</a>
-    </div>
-  </div>
-  <div class="dropdown-divider m-0"></div>
-  <a class="dropdown-item fw-500 pt-3 pb-3" href="page_login_alt.html">
+  <a class="dropdown-item fw-500 pt-3 pb-3" href="javascript:" (click)="logOut()">
     <span data-i18n="drpdwn.page-logout">Logout</span>
-    <span class="float-right fw-n">@codexlantern</span>
+    <span class="float-right fw-n">@circlegiven</span>
   </a>
 </div>
