--- a/client/src/app/database/view/dockyard-view.component.html
+++ b/client/src/app/database/view/dockyard-view.component.html
@@ -2,12 +2,7 @@
 <div class="row">
   <div class="col-xl-12">
     <!-- 검색 -->
-    <div class="input-group input-group-lg mb-g">
-      <input type="text" class="form-control shadow-inset-2" placeholder="Search topics">
-      <div class="input-group-append">
-        <span class="input-group-text"><i class="fal fa-search"></i></span>
-      </div>
-    </div>
+    <div component-search></div>
     <!-- //검색 -->
     <div class="card mb-g border shadow-0">
       <div class="card-header bg-white p-0">
