#15 Dockyard detail initial

--- a/client/src/app/common/header/header.component.html
+++ b/client/src/app/common/header/header.component.html
@@ -17,7 +17,8 @@
   </ng-container>
   <ng-template #default>
     <!-- 알림 -->
-    <div component-alert></div>
+    <!-- TODO 2.0  -->
+    <!-- <div component-alert></div> -->
     <!-- //알림 -->
     <!-- 프로필 or 로그인 -->
     <div component-profile></div>
