--- a/client/src/app/database/view/dockyard-view.component.html
+++ b/client/src/app/database/view/dockyard-view.component.html
@@ -10,8 +10,8 @@
           <div class="col-12 col-md">
             <div class="text-uppercase text-muted py-2 px-3">함선</div>
           </div>
-          <div class="col-sm-6 col-md-3 hidden-md-down">
-            <div class="text-uppercase text-muted py-2 px-3">추천 장비</div>
+          <div class="col-md-2 col-xl-2">
+            <div class="text-uppercase text-muted py-2 px-3">함종</div>
           </div>
         </div>
       </div>
@@ -19,8 +19,7 @@
         <div class="row no-gutters row-grid">
           <!-- thread -->
           <div class="col-12">
-            <div class="row no-gutters align-items-stretch">
-              <!-- 함선 -->
+            <div class="row no-gutters row-grid align-items-stretch">
               <div class="col-md">
                 <div class="p-3">
                   <div class="d-flex">
@@ -38,21 +37,49 @@
                   </div>
                 </div>
               </div>
-              <!-- //함선 -->
-              <!-- 추천 장비 -->
-              <div class="col-8 col-md-3 hidden-md-down">
+              <div class="col-4 col-md-2 col-xl-2 hidden-md-down">
                 <div class="p-3 p-md-3">
-                  <div class="d-flex align-items-center ml-auto">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
-                    <img class="d-block text-muted icon-stack display-4" src="../../../../assets/img/beaver.png">
+                  <div class="d-flex">
+                    <img src="../../../assets/img/azurlane/logo/carrier.png">
+                    <div class="ml-1 align-self-center">
+                      <span class="d-block text-muted">항공모함</span>
+                    </div>
                   </div>
                 </div>
               </div>
-              <!-- //추천 장비 -->
+            </div>
+          </div>
+          <!-- thread -end -->
+          <!-- thread -->
+          <div class="col-12">
+            <div class="row no-gutters row-grid align-items-stretch">
+              <div class="col-md">
+                <div class="p-3">
+                  <div class="d-flex">
+                    <!-- 썸네일 -->
+                    <img class="icon-stack display-4 mr-3 flex-shrink-0" src="../../../../assets/img/azurlane/ship_thum/chapayev.png">
+                    <!-- //썸네일 -->
+                    <div class="d-inline-flex flex-column">
+                      <a href="javascript:void(0)" class="fs-lg fw-500 d-block">
+                        차파예프 <span class="badge badge-warning rounded">1st</span>
+                      </a>
+                      <div class="d-block text-muted fs-sm">
+                        North Union
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 col-md-2 col-xl-2 hidden-md-down">
+                <div class="p-3 p-md-3">
+                  <div class="d-flex">
+                    <img src="../../../assets/img/azurlane/logo/cruiser.png">
+                    <div class="ml-1 align-self-center">
+                      <span class="d-block text-muted">전함</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- thread -end -->
